bug on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@
 @import "_grid";
 
 body {
-	background-color: #2a3440; 
+	background-color: #2a3440;
 }
 
 .footer {
@@ -44,7 +44,7 @@ body {
 }
 
 .welcome-img {
-	height: 500px;
+	height: 400px;
 	width: 450px;
 }
 .we-img {
@@ -66,8 +66,8 @@ body {
 
 .content-container {
 	position: relative;
-	/*background-color: black;*/
-	-webkit-backdrop-filter: blur(5px) grayscale(60%);
+	background-color: black;
+	// -webkit-backdrop-filter: blur(5px) grayscale(60%);
 	height: auto;
 	width: auto;
 	margin-left: auto;
